update cart response and integrate middleware
