# api/controller/cart_controller.go
@@ -6,6 +6,7 @@ import (
 	"online_fashion_shop/api/model/cart"
 	"online_fashion_shop/api/model/request"
 	"online_fashion_shop/api/model/response"
+	model "online_fashion_shop/api/model/user"
 	"online_fashion_shop/api/service"
 
 	"github.com/gin-gonic/gin"
@@ -15,6 +16,28 @@ type CartController struct {
 	Service service.CartService
 }
 
+func ToCartResponse(cartItems []*cart.CartItem) []*response.CartItem {
+	responseItem := make([]*response.CartItem, len(cartItems))
+
+	for index, item := range cartItems {
+		var image string
+		if len(item.ProductDetail.Photos) > 0 {
+			image = item.ProductDetail.Photos[0]
+		}
+
+		responseItem[index] = &response.CartItem{
+			Id:       item.ProductId,
+			Name:     item.ProductDetail.Name,
+			Image:    image,
+			Price:    float64(item.ProductDetail.Price),
+			Size:     item.Size,
+			Color:    item.Color,
+			Quantity: item.Quantity,
+		}
+	}
+	return responseItem
+}
+
 // Update Cart Items of User
 //
 //	@Summary		update cart of customer by received cart item
@@ -22,33 +45,32 @@ type CartController struct {
 //	@Tags			Cart
 //	@Accept			json
 //	@Produce		json
-//	@Param          CartRequest   body       request.UpdateCartRequest    true    "access token received after login"
+//	@Param          CartRequest   body       []request.CartItem    true    "access token received after login"
 //	@Success		200				{object}	string
 //	@Failure		400				{object}	string
 //	@Failure		401				{object}	string
 //	@Router			/cart [post]
 func (controller CartController) Update(c *gin.Context) {
-	var updateCartRequest request.UpdateCartRequest
-	c.BindJSON(updateCartRequest)
+	currentUser := c.MustGet("currentUser").(model.User)
+	var newCartItems []request.CartItem
+	c.BindJSON(&newCartItems)
+	cartItem := make([]*cart.CartItem, len(newCartItems))
 
-	cartItem := make([]cart.CartItem, len(updateCartRequest.Items))
-
-	for index := range updateCartRequest.Items {
-		updateItem := updateCartRequest.Items[index]
-		cartItem[index] = cart.CartItem{
-			CustomerId: updateCartRequest.CustomerId,
-			ProductId:  updateItem.ProductId,
-			Quantity:   updateItem.Quantity,
+	for index := range newCartItems {
+		cartItem[index] = &cart.CartItem{
+			CustomerId: currentUser.Id,
+			ProductId:  newCartItems[index].ProductId,
+			Quantity:   newCartItems[index].Quantity,
 		}
 	}
 
-	err := controller.Service.Update(updateCartRequest.CustomerId, cartItem)
+	err := controller.Service.Update(currentUser.Id, cartItem)
 	if err != nil {
 		errs.HandleFailStatus(c, err.Error(), http.StatusInternalServerError)
 		return
-	} else {
-		c.JSON(200, gin.H{"status": "success", "message": "Update Cart successfully"})
 	}
+
+	c.JSON(200, gin.H{"status": "success", "message": "Update Cart successfully"})
 
 }
 
@@ -59,96 +81,132 @@ func (controller CartController) Update(c *gin.Context) {
 //	@Tags			Cart
 //	@Accept			json
 //	@Produce		json
-//	@Success		200				{object}	response.BaseResponse[[]cart.CartItem]
+//	@Success		200				{object}	response.BaseResponse[[]response.CartItem]
 //	@Failure		400				{object}	string
 //	@Failure		401				{object}	string
 //	@Router			/cart [get]
 func (controller CartController) Get(c *gin.Context) {
-	cartItems, err := controller.Service.Get(c.Param("customer_id"))
-
+	currentUser := c.MustGet("currentUser").(model.User)
+	cartItems, err := controller.Service.Get(currentUser.Id)
+	responseItems := ToCartResponse(cartItems)
 	if err != nil {
 		errs.HandleFailStatus(c, err.Error(), http.StatusInternalServerError)
 		return
-	} else {
-		c.JSON(200, response.BaseResponse[[]*cart.CartItem]{
-			Data:    cartItems,
-			Message: "",
-			Status:  "success",
-		})
 	}
+
+	c.JSON(200, response.BaseResponse[[]*response.CartItem]{
+		Data:    responseItems,
+		Message: "",
+		Status:  "success",
+	})
+
 }
 
-// Add new item to card
+// AddMany new items to card
 //
-//	@Summary		add item to cart
-//	@Description	add item to cart, return info of added item
+//	@Summary		add items to cart
+//	@Description	add items to cart, return info of added item
 //	@Tags			Cart
 //	@Accept			json
 //	@Produce		json
-//	@Param          CartRequest   body       request.AddItemRequest    true    "Add item request"
-//	@Success		200				{object}	cart.CartItem
+//	@Param          CartRequest   body      []request.CartItem    true    "AddMany item request"
+//	@Success		200				{object}	response.BaseResponse[[]response.CartItem]
 //	@Failure		400				{object}	string
 //	@Failure		401				{object}	string
 //	@Router			/cart [put]
-func (controller CartController) Add(c *gin.Context) {
-	var rq request.AddItemRequest
-	err := c.BindJSON(&rq)
+func (controller CartController) AddMany(c *gin.Context) {
+	var items []request.CartItem
+	currentUser := c.MustGet("currentUser").(model.User)
+	err := c.BindJSON(&items)
 
 	if err != nil {
 		errs.HandleFailStatus(c, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	addedItem, err := controller.Service.Add(rq.CustomerId, cart.CartItem{ProductId: rq.ProductId, Quantity: rq.Quantity})
+
+	cartItem := make([]*cart.CartItem, len(items))
+	for index, item := range items {
+		cartItem[index] = &cart.CartItem{
+			CustomerId: currentUser.Id,
+			ProductId:  item.ProductId,
+			Quantity:   item.Quantity,
+		}
+	}
+
+	addedItems, err := controller.Service.AddMany(currentUser.Id, cartItem)
 	if err != nil {
 		errs.HandleFailStatus(c, err.Error(), http.StatusInternalServerError)
 		return
-	} else {
-		c.JSON(http.StatusOK, gin.H{"status": "success", "data": addedItem})
 	}
+	c.JSON(200, response.BaseResponse[[]*response.CartItem]{
+		Data:    ToCartResponse(addedItems),
+		Message: "",
+		Status:  "success",
+	})
 
 }
 
-// Delete new item to card
+// Delete one item in cart
 //
-//	@Summary		delete card item of customer cart
-//	@Description	Delete cart item by product id of customer
+//	@Summary		delete one item in cart
+//	@Description	Delete cart item which specifies by product_id and customer_auth code
 //	@Tags			Cart
 //	@Accept			json
 //	@Produce		json
-//	@Param          customer_id   path       string    true    "customer's id"
-//	@Param          product_id    path       string    true    "product's id"
+//	@Param          product_id    query       string    true    "product's id"
+//	@Success		200				{object}	string
+//	@Failure		400				{object}	string
+//	@Failure		401				{object}	string
+//	@Router			/cart/{product_id} [delete]
+func (controller CartController) Delete(c *gin.Context) {
+	productId := c.Param("product_id")
+	currentUser := c.MustGet("currentUser").(model.User)
+	err := controller.Service.DeleteOne(currentUser.Id, productId)
+	if err != nil {
+		errs.HandleFailStatus(c, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{"status": "success", "message": "Delete successfully"})
+}
+
+// DeleteMany  items in customer cart
+//
+//	@Summary		delete all items in cart
+//	@Description	Delete all item in cart
+//	@Tags			Cart
+//	@Accept			json
+//	@Produce		json
 //	@Success		200				{object}	string
 //	@Failure		400				{object}	string
 //	@Failure		401				{object}	string
 //	@Router			/cart [delete]
-func (controller CartController) Delete(c *gin.Context) {
+func (controller CartController) DeleteMany(c *gin.Context) {
 
-	customerId := c.Param("customer_id")
-	productId := c.Param("product_id")
-	err := controller.Service.DeleteOne(customerId, productId)
+	currentUser := c.MustGet("currentUser").(model.User)
+
+	err := controller.Service.DeleteAll(currentUser.Id)
 
 	if err != nil {
 		errs.HandleFailStatus(c, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"status": "success", "message": "DeleteOne successfully"})
+	c.JSON(http.StatusOK, gin.H{"status": "success", "message": "Delete successfully"})
 }
 
 // CheckOut items in cart
 //
 //	@Summary		Use to validate items of cart then modify it if invalid
-//	@Description	Check out customer cart then delete invalid item(sold out item) return list of sold-out Items' ID
+//	@Description	Check out customer cart then delete invalid item(sold out item) return list of sold-out Items' ID.Use before make order to ensure order will valid
 //	@Tags			Cart
 //	@Accept			json
 //	@Produce		json
-//	@Param          customer_id   path       string    true    "customer's id"
 //	@Success		200				{object}	 response.BaseResponse[[]string]
 //	@Failure		400				{object}	string
 //	@Failure		401				{object}	string
 //	@Router			/cart/checkout [get]
 func (controller CartController) CheckOut(c *gin.Context) {
-	customerId := c.Param("customer_id")
-	soldItemIds, err := controller.Service.CheckOutAndDelete(customerId)
+	currentUser := c.MustGet("currentUser").(model.User)
+	soldItemIds, err := controller.Service.CheckOutAndDelete(currentUser.Id)
 	if err != nil {
 		errs.HandleFailStatus(c, err.Error(), http.StatusInternalServerError)
 		return
