# docs/swagger.json
@@ -169,7 +169,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.BaseResponse-array_cart_CartItem"
+                            "$ref": "#/definitions/response.BaseResponse-array_response_CartItem"
                         }
                     },
                     "400": {
@@ -187,7 +187,7 @@
                 }
             },
             "put": {
-                "description": "add item to cart, return info of added item",
+                "description": "add items to cart, return info of added item",
                 "consumes": [
                     "application/json"
                 ],
@@ -197,15 +197,18 @@
                 "tags": [
                     "Cart"
                 ],
-                "summary": "add item to cart",
+                "summary": "add items to cart",
                 "parameters": [
                     {
-                        "description": "Add item request",
+                        "description": "AddMany item request",
                         "name": "CartRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.AddItemRequest"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/request.CartItem"
+                            }
                         }
                     }
                 ],
@@ -213,7 +216,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/cart.CartItem"
+                            "$ref": "#/definitions/response.BaseResponse-array_response_CartItem"
                         }
                     },
                     "400": {
@@ -249,7 +252,10 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.UpdateCartRequest"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/request.CartItem"
+                            }
                         }
                     }
                 ],
@@ -275,7 +281,7 @@
                 }
             },
             "delete": {
-                "description": "Delete cart item by product id of customer",
+                "description": "Delete all item in cart",
                 "consumes": [
                     "application/json"
                 ],
@@ -285,23 +291,7 @@
                 "tags": [
                     "Cart"
                 ],
-                "summary": "delete card item of customer cart",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "customer's id",
-                        "name": "customer_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "product's id",
-                        "name": "product_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
+                "summary": "delete all items in cart",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -326,7 +316,7 @@
         },
         "/cart/checkout": {
             "get": {
-                "description": "Check out customer cart then delete invalid item(sold out item) return list of sold-out Items' ID",
+                "description": "Check out customer cart then delete invalid item(sold out item) return list of sold-out Items' ID.Use before make order to ensure order will valid",
                 "consumes": [
                     "application/json"
                 ],
@@ -337,12 +327,47 @@
                     "Cart"
                 ],
                 "summary": "Use to validate items of cart then modify it if invalid",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.BaseResponse-array_string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/cart/{product_id}": {
+            "delete": {
+                "description": "Delete cart item which specifies by product_id and customer_auth code",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "delete one item in cart",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "customer's id",
-                        "name": "customer_id",
-                        "in": "path",
+                        "description": "product's id",
+                        "name": "product_id",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -350,7 +375,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.BaseResponse-array_string"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -1878,18 +1903,14 @@
                 }
             }
         },
-        "request.AddItemRequest": {
+        "request.CartItem": {
             "type": "object",
             "required": [
-                "customer_id",
-                "productId",
+                "product_id",
                 "quantity"
             ],
             "properties": {
-                "customer_id": {
-                    "type": "string"
-                },
-                "productId": {
+                "product_id": {
                     "type": "string"
                 },
                 "quantity": {
@@ -1911,60 +1932,10 @@
                 }
             }
         },
-        "request.UpdateCartRequest": {
-            "type": "object",
-            "required": [
-                "customer_id",
-                "items"
-            ],
-            "properties": {
-                "customer_id": {
-                    "type": "string"
-                },
-                "items": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/request.UpdateItem"
-                    }
-                }
-            }
-        },
-        "request.UpdateItem": {
-            "type": "object",
-            "required": [
-                "productId",
-                "quantity"
-            ],
-            "properties": {
-                "productId": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
-                }
-            }
-        },
         "response.BaseResponse-any": {
             "type": "object",
             "properties": {
                 "data": {},
-                "message": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.BaseResponse-array_cart_CartItem": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/cart.CartItem"
-                    }
-                },
                 "message": {
                     "type": "string"
                 },
@@ -1980,6 +1951,23 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/product.ProductQuantity"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.BaseResponse-array_response_CartItem": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.CartItem"
                     }
                 },
                 "message": {
@@ -2045,6 +2033,32 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.CartItem": {
+            "type": "object",
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "size": {
                     "type": "string"
                 }
             }
